[project]
name = "gzm_transport"
version = "1.0.0"
description = "Profesjonalna biblioteka do obsługi danych GZM (GTFS + SDIP Live)"
requires-python = ">=3.10"
dependencies = ["requests", "beautifulsoup4", "pandas", "tabulate"]

[project.optional-dependencies]
test = ["pytest"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
